concord_macros/tests/dsl/fail/fail_generated_local_policy_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client GeneratedLocalPolicyPolicyApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    header "X-Leak" = policy.clone()
    -> Text<String>
}

fn main() {}
